# Oragami

./: .gitignore  DEMO_GUIDE.md  FIREBLOCKS_COMPREHENSIVE_RESEARCH.md  FIREBLOCKS_IMPLEMENTATION_PLAN.md  FIREBLOCKS_SOLANA_RESEARCH.md  PROJECT_CLEANUP_RECOMMENDATIONS.md  README.md
.kilocode/: mcp.json
backend/compliance-relayer/: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
backend/compliance-relayer/.cargo/: config.toml
backend/compliance-relayer/.github/workflows/: ci.yml
backend/compliance-relayer/benches/: domain_benchmarks.rs
backend/compliance-relayer/docs/: API_REFERENCE.md  ARCHITECTURE.md  CLIENT_INTEGRATION.md  CONFIGURATION.md  OPERATIONS.md  SECURITY.md
backend/compliance-relayer/migrations/: 20240101000000_create_transfer_requests_table.sql  20240113000000_add_token_mint_to_requests.sql  20250114000000_change_amount_to_bigint.sql  20260115181500_add_confidential_transfers.sql  20260116000000_structured_confidential_proofs.sql  20260121000000_create_blocklist_table.sql  20260124000000_create_wallet_risk_profiles.sql  20260129000000_add_jito_retry_tracking.sql  20260130000000_add_request_nonce.sql
backend/compliance-relayer/scripts/: verify_security.sh
backend/compliance-relayer/src/: lib.rs  main.rs
backend/compliance-relayer/src/api/: admin.rs  handlers.rs  mod.rs  router.rs  six.rs
backend/compliance-relayer/src/app/: mod.rs  risk_service.rs  service.rs  state.rs  worker.rs
backend/compliance-relayer/src/domain/: error.rs  mod.rs  traits.rs  types.rs
backend/compliance-relayer/src/infra/: mod.rs
backend/compliance-relayer/src/infra/blockchain/: helius.rs  mod.rs  quicknode.rs  solana.rs  strategies.rs
backend/compliance-relayer/src/infra/blocklist/: mod.rs
backend/compliance-relayer/src/infra/compliance/: mod.rs  range.rs
backend/compliance-relayer/src/infra/database/: mod.rs  postgres.rs
backend/compliance-relayer/src/infra/privacy/: health_check.rs  mod.rs
backend/compliance-relayer/src/infra/six/: mod.rs
backend/compliance-relayer/src/test_utils/: mocks.rs  mod.rs
backend/compliance-relayer/tests/: api_requests.rs  database_integration.rs  infra_blockchain_http_tests.rs  infra_compliance_tests.rs  integration_test.rs
frontend/mosaic/: .editorconfig  .gitignore  .npmrc  .prettierignore  .prettierrc.cjs  CLAUDE.md  CONTRIBUTING.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  turbo.json
frontend/mosaic/.github/workflows/: ci.yml  publish-sdks.yml
frontend/mosaic/apps/app/: .env.example  README.md  components.json  eslint.config.js  next.config.js  package.json  tsconfig.json
frontend/relayer-frontend/: .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/relayer-frontend/docs/: ARCHITECTURE.md
frontend/relayer-frontend/public/wasm/: solana_transfer_wasm_bg.js  solana_transfer_wasm_bg.wasm
frontend/relayer-frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/relayer-frontend/src/hooks/: index.ts  useDashboardAnalytics.ts  useHydrated.ts
frontend/relayer-frontend/wasm/: Cargo.toml
frontend/relayer-frontend/wasm/src/: lib.rs
oragami-vault/: Anchor.toml
oragami-vault/programs/oragami-vault/: Cargo.toml
oragami-vault/tests/: oragami-vault.ts
programs/cvault-transfer-hook/: Anchor.toml
six-data-access/: Cross Currency and Precious Metals Identifiers.xlsx
six-data-access/CH56655-api2026hack22/: CSR.pem  private-key.pem
(+212 files in other folders)
