[package]
name = "solana-compliance-relayer"
version = "0.1.0"
edition = "2024"
description = "A production-ready Rust template demonstrating testable architecture"
license = "MIT"

[features]
default = []
test-utils = []
real-blockchain = []

[dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["full", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "native-tls"] }
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "limit", "cors"] }
bs58 = "0.5"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8.5"
sha2 = "0.10"
validator = { version = "0.20", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI documentation
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Rate limiting  
governor = "0.10.4"

# Thread-safe concurrent HashMap for blocklist
dashmap = "6"

# Binary serialization for Solana transactions
bincode = "1.3"

# Solana SDK
solana-sdk = "3.0.0"
solana-client = "3.1.6"
solana-commitment-config = "3.1.0"
solana-system-interface = { version = "3.0.0", features = ["bincode"] }
spl-token = "9.0.0"
solana-program-pack = "3.0.0"
spl-token-interface = "2.0.0"
spl-associated-token-account = "8.0.0"
solana-compute-budget-interface = "3.0.0"
bytemuck = "1.14"
spl-token-2022 = "10.0.0"
spl-token-client = "0.18.0"

# ZK Proof Generation for Confidential Transfers
spl-token-confidential-transfer-proof-generation = "0.5.1"
spl-token-confidential-transfer-proof-extraction = "0.5.1"
solana-zk-sdk = "4.0.0"
spl-record = "0.4.0"

[dev-dependencies]
solana-compliance-relayer = { path = ".", features = ["test-utils"] }
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tokio-test = "0.4"
testcontainers = "0.26"
criterion = { version = "0.8.1", features = ["async_tokio"] }
wiremock = "0.6"

[[bench]]
name = "domain_benchmarks"
harness = false


[lib]
name = "solana_compliance_relayer"
path = "src/lib.rs"