[package]
name = "solana-transfer-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM module for generating signed Solana transfer requests"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"

# Ed25519 signing
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Random number generation (browser-compatible)
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

# Base58 encoding (for Solana addresses and signatures)
bs58 = "0.5"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Console logging in browser
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
